# isaac_twist2

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
assets/ckpts/: twist2_1017_20k.onnx  twist2_1017_25k.onnx
assets/example_motions/: 0807_yanjie_walk_001.pkl  0807_yanjie_walk_002.pkl  0807_yanjie_walk_003.pkl  0807_yanjie_walk_004.pkl  0807_yanjie_walk_005.pkl  0807_yanjie_walk_006.pkl  0807_yanjie_walk_007.pkl  0807_yanjie_walk_008.pkl  0807_yanjie_walk_009.pkl  0807_yanjie_walk_010.pkl
assets/g1/: g1_29dof_rev_1_0.xml  g1_custom_collision.urdf  g1_custom_collision_with_fixed_hand.urdf  g1_custom_collision_with_revolute_hand.urdf  g1_mocap.xml  g1_origin_collision.urdf  g1_sim2sim_29dof.xml  g1_sim2sim_29dof_modified.xml  g1_sim2sim_29dof_with_hands.xml  g1_sim2sim_with_wrist_roll.xml
assets/g1_inspire_hand_usd/: g1_29dof_inspire_hand.usd
assets/g1_inspire_hand_usd/.thumbs/: g1_minimal.thumb.usd
assets/g1_inspire_hand_usd/configuration/: g1_29dof_rev_1_0_with_inspire_hand_retarget_inspire_white_robot.usd  g1_29dof_rev_1_0_with_inspire_hand_retarget_inspire_white_sensor.usd
assets/g1_usd/: g1_29dof_inspire_hand.usd
assets/g1_usd/.thumbs/: g1.thumb.usd
assets/g1_usd/configuration/: g1_29dof_rev_1_0_with_inspire_hand_retarget_inspire_white_physics.usd  g1_29dof_with_hand_rev_1_0_physics.usd  (+2 more)
assets/g1_xml/: g1_mocap_29dof.xml  g1_mocap_with_wrist_roll.xml  g1_sim2sim.xml
assets/ref_motions/: accad_A3___Swing_t2.pkl
config/: extension.toml
isaac_twist2/: __init__.py  g1_twist2_controller.py  rot_utils.py
scripts/: run_sim2sim.py  transplant_hands.py
(+10 files in other folders)
